# HelloGit

./: README.md  test.txt
BasicPresenterSample/: BasicPresenterSample.cpp  BasicPresenterSampleAugmentedRealityModeBackgroundFragmentShader.glsl  BasicPresenterSampleAugmentedRealityModeBackgroundVertexShader.glsl  BasicPresenterSampleAugmentedRealityModeMaskFragmentShader.glsl  BasicPresenterSampleAugmentedRealityModeMaskVertexShader.glsl  BasicPresenterSampleFragmentShader.glsl  BasicPresenterSampleVertexShader.glsl  CMakeLists.txt
